	* Resolves #77246: Missing extbase declaration for field "static_lang_isocode" in sys_language
	* Follow-up to Resolves #79209: Migrate update script to Doctrine
	* Resolves #79229: Migrate suggest receiver to Doctrine
	* Follow-up to Resolves #79209: Migrate update script to Doctrine
	* Resolves #79230: Migrate ProcessDataMap hook to Doctrine

2017-01-08  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79207: Cleanup extension configuration
	* Resolves #79209: Migrate update script to Doctrine
	* Resolves #79210: Migrate AbstractEntityRepository to Doctrine

2017-01-07  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Cleanup ManagerController.php
	* Cleanup SelectViewHelper.php
	* Migrate DatabaseUpdateUtility to Doctrine

2017-01-06  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79192: Remove constant PATH_BE_staticinfotables_rel
	* Require TYPO3 CMS 7.6.0
	* Follow-up to #79174: Let the SelectViewHelper accept correct values
	* Resolves #79193: Drop renderMode argument from flash message view helper

2017-01-05  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79174: Let the SelectViewHelper accept correct values
	* Resolves #79172: Database updates not working for translations with TYPO3 8.0

2016-07-14  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Update version to 6.3.10

2016-06-29  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #76640: Fix removed TCA icon options

2016-02-19  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Update version to 6.3.9

2016-02-16  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #73462: Update of static_info_tables breaks TYPO3 6.2 installation
	* Resolves #72828: Follow-up to Avoid exceptions in backend list
	* Update version to 6.3.8
	* Resolves #73497: Composer name sjbr/static_info_tables vs sjbr/static-info-tables

2016-02-15  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #72260: SelectViewHelper should honour TypoScript settings
	* Update the manual